--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -164,14 +164,15 @@
 
                             <TextView
                                 android:id="@+id/recommendationLabel"
-                                android:layout_width="117dp"
-                                android:layout_height="26dp"
+                                android:layout_width="79dp"
+                                android:layout_height="27dp"
                                 android:layout_marginLeft="10dp"
+                                android:layout_marginTop="4dp"
                                 android:fontFamily="@font/inter_semibold"
                                 android:text="Recommend"
                                 android:textSize="13sp"
                                 app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintHorizontal_bias="0.608"
+                                app:layout_constraintHorizontal_bias="0.461"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
 
