--- a/app/src/main/res/layout/update_goal.xml
+++ b/app/src/main/res/layout/update_goal.xml
@@ -2,70 +2,33 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroundmain"
-    android:padding="0dp">
+    android:background="@color/backgroundmain">
 
-    <RadioGroup
-        android:id="@+id/goalRadioGroup"
+    <ListView
+        android:id="@+id/weekly_goal_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="34dp"
-        android:orientation="vertical">
-
-        <RadioButton
-            android:id="@+id/radioButtonGainWeight"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/goal_selector"
-            android:button="@null"
-            android:fontFamily="@font/inter_semibold"
-            android:gravity="center"
-            android:padding="12dp"
-            android:text="Gain Weight"
-            android:textColor="@color/radiobuttoncolor"
-            android:layout_marginBottom="34dp"
-            android:textSize="16sp" />
-
-        <RadioButton
-            android:id="@+id/radioButtonMaintainWeight"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/goal_selector"
-            android:fontFamily="@font/inter_semibold"
-            android:button="@null"
-            android:gravity="center"
-            android:padding="12dp"
-            android:text="Maintain Weight"
-            android:textColor="@color/radiobuttoncolor"
-            android:layout_marginBottom="34dp"
-
-            android:textSize="16sp" />
-
-        <RadioButton
-            android:id="@+id/radioButtonLoseWeight"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/goal_selector"
-            android:fontFamily="@font/inter_semibold"
-            android:button="@null"
-            android:textColor="@color/radiobuttoncolor"
-            android:gravity="center"
-            android:padding="12dp"
-            android:text="Lose Weight"
-            android:textSize="16sp" />
-
-    </RadioGroup>
+        android:divider="#FFFFFF"
+        android:dividerHeight="1dp"
+       >
+        <!-- List items are defined dynamically or through an adapter -->
+    </ListView>
+    <View
+        android:id="@+id/viewww"
+        android:layout_below="@id/weekly_goal_list"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#FFFFFF" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonUpdate"
+        android:id="@+id/updateGoalButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/goalRadioGroup"
-        android:layout_marginTop="280dp"
+        android:layout_below="@id/viewww"
         android:background="@drawable/next_button"
-        android:gravity="center"
-        android:text="Next"
-        android:textColor="@color/white"
+        android:layout_marginTop="20dp"
+        android:padding="12dp"
+        android:text="Update"
+        android:textColor="@color/white" />
 
-        android:textSize="16sp" />
 </RelativeLayout>
