--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,9 @@
     <color name="light_blue">#386BF6</color>
     <color name="textColor">#FF000000</color> <!-- black -->
     <color name="hintColor">#FF808080</color> <!-- gray -->
+    <color name="selected_color">#A2D9FF</color>
+    <color name="pressed_color">#A2D9FF</color>
+    <color name="default_color">#FFFFFF</color>
 
 
 
